--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,327 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap');
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  max-width: 100%;
+  
+}
+:root {
+  --background: #f1f1f1;
+  --background-sec: #bfbfbf;
+  --dark-gary:#333;
+  --light-brown:#c7a17a;
+  --black:#1f2226;
+}
+body{
+    font-family: "Open Sans", sans-serif;
+    
+}
+header{
+  background-color:white;
+}
+h1,h2,h3{
+  font-family: "Oswald", sans-serif;
+}
+ li{
+  list-style: none;
+  
+}
+a{
+  text-decoration: none;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+nav ul li a{ 
+  text-decoration: none;
+  color: var(--dark-gary);
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+a:hover{
+  color: var(--light-brown);
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+}
+.logo{
+ width: 240px;
+ padding-left: 50px;
+
+}
+ul{
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  margin-top: 15px;
+  margin-right: 80px;
+}
+#Home{
+      
+  background: url(./imgs/home-bg.png) center no-repeat;
+  background-size: 100%;
+  background-color: var(--background);
+}
+.homeImg{
+  width: 300px;
+}
+.homeContent{
+  max-width: 1200px;
+ height: 90vh;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 60% 40%;
+  justify-content: center;
+  padding-top: 3%;
+  padding-left: 10%;
+}
+.homeTextH1{
+  padding-right: 51%;
+}
+.textAboutH1{
+  padding-right: 48%;
+}
+.homeText button{
+  background-color: var(--light-brown);
+  color: white;
+  border: 3px solid var(--light-brown);
+  border-radius: 15px;
+  width: 150px;
+  height: 35px;
+  margin-top: 15px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.homeText button:hover{
+  background-color: var(--dark-gary);
+  border: 3px solid var(--dark-gary);
+}
+.homeText h3{
+  font-size: 25px;
+  
+}
+.homeText h1{
+  font-size: 50px;
+}
+.homeText h1 span{
+  font-size: 50px;
+  color: var(--light-brown);
+}
+.aboutImg{
+   width: 320px;
+}
+.AboutCon{
+  display: grid;
+  grid-template-columns: 40% 60%;
+  
+}
+#about{
+  height: 315px;
+}
+.AboutCon h1 span{
+  color: var(--light-brown);
+}
+.AboutCon h3{
+  font-size: 24px;
+}
+#menu{
+  background-color: var(--background);
+}
+.headerOfTheMenu{
+   text-align: center;
+   padding-top:25px ;
+}
+.headerOfTheMenu span{
+  color: var(--light-brown);
+  font-size: 18px;
+  
+}
+.MenuItemsChildren img{
+  width: 100px;
+}
+.MenuItemsChildren h4{
+  color: var(--light-brown);
+}
+
+
+.MenuItemsCon {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    gap: 20px; /* space between items */
+    padding: 20px;
+}
+
+.MenuItemsChild {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  transition: all 0.4s ease;
+}
+.MenuItemsChild:hover{
+  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.343);
+}
+.MenuItemsChildren img {
+    width: 100px;
+    margin-bottom: 10px;
+}
+/* testim start */
+.TestimCon{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+.TestimChild{
+  background-color: var(--background);
+  width: 300px;
+  height: 225px;
+  border-radius: 16px;
+   padding-left: 10px;
+   transition: all 0.3s ease;
+}
+.TestimChild:hover{
+  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.343);
+
+}
+.TestimChild img {
+  width: 100px;
+  border-radius: 50%;
+ margin-left: 75px;
+object-fit: cover;
+border: 5px solid #fff;
+background-color: #f1f1f1;
+}
+.TestimChild h2{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#test h1{
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.TestH1{
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* testim end */
+/* conatct start */
+#contact p{
+  color: var(--light-brown);
+  text-align: center;
+  font-size: 18px;
+}
+#contact{
+  background-color: var(--background);
+}
+#contact p,h1{
+text-align: center;
+}
+.contactCon{
+  
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+iframe{
+  width: 450px;
+}
+Form{
+  background-color: white;
+  width: 300px;
+  height: 100%;
+  padding: 20px;
+}
+input{
+  width: 100%;
+  height: 6%;
+}
+input:focus{
+  border:1px solid var(--light-brown);
+  outline: 1.5px solid var(--light-brown);
+  
+}
+form button{
+  margin-left: 3%;
+  width: 90%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dark-gary);
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+form button:hover{
+  background-color: #c7a17a;
+  border: 3px solid var(--light-brown);
+}
+input::placeholder{
+  padding-left: 5px;
+}
+/* contact end */
+/* footer start */
+#upperFooter{
+  background-color: var(--black);
+  color: white;
+  height: 250px;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  justify-content: center;
+  padding-top: 20px;
+  
+}
+.footerText{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 12px;
+}
+.footerChild2{
+  padding-left: 35%;
+}
+.footerChild2 ul{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.footerChild2 li{
+  list-style: none;
+}
+.footerChild3{
+  padding-left: 30%;
+}
+.footerChild3 a{
+  text-decoration: none;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.footerChild3 li{
+  list-style: none;
+  color: white;
+  display: flex;
+  cursor: pointer;
 }
+.footerChild3 ul{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
+.footerChild2 a{
+  color: white;
+  transition: all 0.3s ease;
+}
+.footerChild2 a:hover{
+  color: #c7a17a;
+}
+.bottomFooter{
+  background-color: var(--dark-gary);
+  color: white;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* footer endd */
+/* responsive design start */
+
+/* responsive design end */
