--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin:0;
   padding: 0;
   box-sizing: border-box;
-  max-width: 100%;
+  max-width: auto;
   
 }
 :root {
@@ -46,7 +46,7 @@ nav{
   justify-content: space-between;
 }
 .logo{
- width: 240px;
+ max-width: 240px;
  padding-left: 50px;
 
 }
@@ -64,7 +64,7 @@ ul{
   background-color: var(--background);
 }
 .homeImg{
-  width: 300px;
+  max-width: 300px;
 }
 .homeContent{
   max-width: 1200px;
@@ -87,7 +87,7 @@ ul{
   color: white;
   border: 3px solid var(--light-brown);
   border-radius: 15px;
-  width: 150px;
+  max-width: 150px;
   height: 35px;
   margin-top: 15px;
   transition: all 0.3s ease;
@@ -109,7 +109,7 @@ ul{
   color: var(--light-brown);
 }
 .aboutImg{
-   width: 320px;
+   max-width: 320px;
 }
 .AboutCon{
   display: grid;
@@ -117,7 +117,7 @@ ul{
   
 }
 #about{
-  height: 315px;
+  height: auto;
 }
 .AboutCon h1 span{
   color: var(--light-brown);
@@ -138,7 +138,7 @@ ul{
   
 }
 .MenuItemsChildren img{
-  width: 100px;
+  max-width: 100px;
 }
 .MenuItemsChildren h4{
   color: var(--light-brown);
@@ -164,7 +164,7 @@ ul{
   box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.343);
 }
 .MenuItemsChildren img {
-    width: 100px;
+    max-width: 100px;
     margin-bottom: 10px;
 }
 /* testim start */
@@ -175,8 +175,8 @@ ul{
 }
 .TestimChild{
   background-color: var(--background);
-  width: 300px;
-  height: 225px;
+  max-width: 300px;
+  height:auto;
   border-radius: 16px;
    padding-left: 10px;
    transition: all 0.3s ease;
@@ -186,12 +186,13 @@ ul{
 
 }
 .TestimChild img {
-  width: 100px;
+  max-width: 100px;
   border-radius: 50%;
  margin-left: 75px;
 object-fit: cover;
 border: 5px solid #fff;
 background-color: #f1f1f1;
+padding: 12px;
 }
 .TestimChild h2{
   text-align: center;
@@ -222,16 +223,16 @@ text-align: center;
   gap: 100px;
 }
 iframe{
-  width: 450px;
+  max-width: 450px;
 }
 Form{
   background-color: white;
-  width: 300px;
+  max-width: 300px;
   height: 100%;
   padding: 20px;
 }
 input{
-  width: 100%;
+  max-width: 100%;
   height: 6%;
 }
 input:focus{
@@ -241,7 +242,7 @@ input:focus{
 }
 form button{
   margin-left: 3%;
-  width: 90%;
+  max-width: 90%;
   height: 10%;
   display: flex;
   justify-content: center;
@@ -322,6 +323,4 @@ input::placeholder{
   align-items: center;
 }
 /* footer endd */
-/* responsive design start */
-
-/* responsive design end */
+/*  */
