--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   max-width: auto;
   
 }
+.footerChild2 ul,.footerChild3 ul{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 :root {
   --background: #f1f1f1;
   --background-sec: #bfbfbf;
@@ -487,7 +492,12 @@ input::placeholder{
   .logo {
     max-width: 180px;
   }
-  
+  .bottomFooter p{
+    font-size: 12px;
+  }
+  .upperFooter{
+    text-align: center;
+  }
   .homeText h1 {
     font-size: 32px;
   }
